--- a/index.html
+++ b/index.html
@@ -401,6 +401,7 @@
 	<link rel="stylesheet" id="elementor-icons-shared-0-css" href="./index_files/fontawesome.min.css" media="all">
 	<link rel="stylesheet" id="elementor-icons-fa-solid-css" href="./index_files/solid.min.css" media="all">
 	<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="./index_files/jquery.min.js.download" id="jquery-core-js"></script>
 	<script src="./index_files/jquery-migrate.min.js.download" id="jquery-migrate-js"></script>
 	<link rel="https://api.w.org/" href="http://localhost/500receitaszero/wp-json/">
